# aau2021-entry

./: .gitignore  Cargo.toml  README.md  index.html  zipit.sh
src/: main.rs
