[package]
name = "aau2021"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad="0.3"
rapier2d = {version = "0.11"}

[profile.dev.package.rapier2d]
opt-level = 3
codegen-units=1

[profile.release]
lto = true

